Remove an orphaned string 'sound'
Fixed a bug that caused charts only to clear after clearing the model twice.
Fixed: icicle graphics move around on the ramp while the sim is running
# 1.03.66 (41240) May 26, 2010
Improved performance on chart tabs by switching from JLabel to JTextField
Removed the "Fixed/Adjustable" radio buttons from the coordinates tab
Fixed: The F_sum label in the control panel overlaps the arrow symbol
Internal improvements, performance optimizations and improved documentation
# 1.03.65 (41163) May 25, 2010
Fixed: Object shouldn't go behind house if it misses the door
Show crashed image icons in summary windows during game mode, if object crashed
After 10 seconds of no arrows key pressing, pop up the "press arrow keys" icon
Removed workaround that checked the result hashmap before applying game logic
Move object into house (between layers) on successful delivery
Fixed: Door only partly opens on second play through
Set ramp angle slider maximum to 80 degrees
Converted vector component selection controls from checkboxes to radio buttons in Coordinate Frames tab
Fixed: Fire dog water drops appear below the fire dog
Fixed: when dragging the rightmost wall, it snaps the ramp to be at the mouse location
Add energy conservation on airborne -> ground crash by dissipating extra energy into heat
Fixed: Object remains broken after crashing when you hit playback
Added a "sec" label to the time charts
Show friction force below applied force when they would otherwise overlap
Made it possible to set vector label offset orientations
Added tick marks to the applied force slider to make the knob bigger
Added a raised bevel border to the applied force slider
Limited coordinate frame angle to 80 degrees
Limited ramp angle to 80 degrees
Fixed: Mystery object does not break apart.
Made it so you can't zoom out the graphs further than 20 seconds by graying out the horizontal zoom buttons, see #2361
Made it so that dragging the rightmost wall rotates the ramp angle.